2017-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/81299
	* g++.dg/cpp1y/lambda-generic-ice7.C: New.

2017-10-10  Nathan Sidwell  <nathan@acm.org>

	* g++.dg/lookup/extern-c-redecl6.C: New.
	* g++.dg/lookup/extern-c-hidden.C: Adjust diagnostics.
	* g++.dg/lookup/extern-c-redecl.C: Likewise.
	* g++.old-deja/g++.other/using9.C: Likewise.

2017-10-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/78006
	* g++.dg/cpp1y/auto-fn40.C: New.

2017-10-10  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/81032
	* g++.dg/cpp1y/lambda-generic-ice6.C: New.

2017-10-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/68205
	* gcc.c-torture/execute/20040709-3.c: New test.

	PR c++/67625
	* g++.dg/cpp0x/pr67625.C: New test.

	PR middle-end/70887
	* g++.dg/cpp0x/pr70887.C: New test.

	PR c++/70338
	* g++.dg/cpp0x/pr70338.C: New test.

	PR c++/77786
	* g++.dg/cpp1y/pr77786.C: New test.

	PR c++/71875
	* g++.dg/cpp1y/pr71875.C: New test.

	PR c++/77578
	* g++.dg/gomp/pr77578.C: New test.

	PR middle-end/70100
	* g++.dg/opt/pr70100.C: New test.

	PR c++/68252
	* g++.dg/other/pr68252.C: New test.

	PR target/79565
	PR target/82483
	* gcc.target/i386/pr82483-1.c: New test.
	* gcc.target/i386/pr82483-2.c: New test.

2017-10-10  Will Schmidt <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-mult-int128-p8.c: Update options
	* gcc.target/powerpc/fold-vec-mult-int128-p9.c: Update expected
	instruction list.

2017-10-10  Nathan Sidwell  <nathan@acm.org>

	PR preprocessor/82506
	* g++.dg/cpp/string-3.C: New.

2017-10-10  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-splat-16.c: New
	* gcc.target/powerpc/fold-vec-splat-32.c: New.
	* gcc.target/powerpc/fold-vec-splat-8.c: New.

2017-10-10  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/82233
	* gfortran.dg/execute_command_line_3.f90: New test.

2017-10-10  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-splat-16.c: New